código funcionando (Sono zzzzzzzzzzzzzzzzzzzzzzzzz)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "mutex": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "rm_edf+interface_web": "cpp"
     }
 }
